--- a/index.html
+++ b/index.html
@@ -11,21 +11,8 @@
     <script src="script.js"></script>
 </head>
 
-<body style="margin: 8px;">
-    <h1>Überschrift</h1>
+<body>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt eius nam eligendi pariatur repellendus
-        placeat, voluptatibus distinctio aliquid incidunt aspernatur sit, impedit assumenda, autem ea excepturi
-        molestias at asperiores? Expedita?</p>
-
-    <p>Das ist ein <button class="btn btn-outline-danger">Button</button></p>
-    <p>Das ist ein <a href="#">link</a></p>
-
-    <div class="card">
-        <div class="card-body">
-            This is some text within a card body.
-        </div>
-    </div>
 </body>
 
 </html>
