--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h1">QuizApp</span>
+        </div>
+      </nav>
 
 </body>
 
