--- a/index.html
+++ b/index.html
@@ -22,9 +22,51 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1">QuizApp</span>
+            <span class="navbar-brand mb-0 h1">QuizApp</span>
         </div>
-      </nav>
+    </nav>
+
+    <div class="container">
+
+        <div class="card quiz-cart">
+            <div class="card-body">
+                <h5 class="card-title">Frage</h5>
+
+                <div class="card mb-2">
+                    <div class="card-body">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2">
+                    <div class="card-body">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2">
+                    <div class="card-body">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2">
+                    <div class="card-body">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="question-footer">
+                    <span>
+                        <b>1</b> von <b>5</b> Fragen
+                    </span>
+                    <button>
+                        Nächste Frage
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
