--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <span>
                         <b>1</b> von <b>5</b> Fragen
                     </span>
-                    <button>
+                    <button class="btn btn-outline-secondary">
                         Nächste Frage
                     </button>
                 </div>
