--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body>
+<body onload="init()">
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <span class="navbar-brand mb-0 h1">QuizApp</span>
@@ -28,37 +28,37 @@
 
     <div class="container">
 
-        <div class="card quiz-cart">
+        <div class="card quiz-card">
             <div class="card-body">
-                <h5 class="card-title">Frage</h5>
+                <h5 class="card-title" id="questiontext">Frage</h5>
 
-                <div class="card mb-2">
-                    <div class="card-body">
+                <div class="card quiz-answer-card mb-2" onclick="answer()">
+                    <div class="card-body" id="answer1">
                         Antwort
                     </div>
                 </div>
 
-                <div class="card mb-2">
-                    <div class="card-body">
+                <div class="card quiz-answer-card mb-2" onclick="answer()">
+                    <div class="card-body" id="answer2">
                         Antwort
                     </div>
                 </div>
 
-                <div class="card mb-2">
-                    <div class="card-body">
+                <div class="card quiz-answer-card mb-2" onclick="answer()">
+                    <div class="card-body" id="answer3">
                         Antwort
                     </div>
                 </div>
 
-                <div class="card mb-2">
-                    <div class="card-body">
+                <div class="card quiz-answer-card mb-2" onclick="answer()">
+                    <div class="card-body" id="answer4">
                         Antwort
                     </div>
                 </div>
 
                 <div class="question-footer">
                     <span>
-                        <b>1</b> von <b>5</b> Fragen
+                        <b>1</b> von <b id="question-count">5</b> Fragen
                     </span>
                     <button class="btn btn-outline-secondary">
                         Nächste Frage
