--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
             <div class="card-body">
                 <h5 class="card-title" id="questiontext">Frage</h5>
 
-                <div class="card quiz-answer-card mb-2" onclick="answer()">
+                <div class="card quiz-answer-card mb-2" onclick="answer('answer1')">
                     <div class="card-body" id="answer1">
                         Antwort
                     </div>
                 </div>
 
-                <div class="card quiz-answer-card mb-2" onclick="answer()">
+                <div class="card quiz-answer-card mb-2" onclick="answer('answer2')">
                     <div class="card-body" id="answer2">
                         Antwort
                     </div>
                 </div>
 
-                <div class="card quiz-answer-card mb-2" onclick="answer()">
+                <div class="card quiz-answer-card mb-2" onclick="answer('answer3')">
                     <div class="card-body" id="answer3">
                         Antwort
                     </div>
                 </div>
 
-                <div class="card quiz-answer-card mb-2" onclick="answer()">
+                <div class="card quiz-answer-card mb-2" onclick="answer('answer4')">
                     <div class="card-body" id="answer4">
                         Antwort
                     </div>
