--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
@@ -58,9 +56,9 @@
 
                 <div class="question-footer">
                     <span>
-                        <b>1</b> von <b id="question-count">5</b> Fragen
+                        Frage <b id="number-of-question">1</b> von <b id="question-count">5</b>
                     </span>
-                    <button class="btn btn-outline-secondary">
+                        <button onclick="nextQuestion()" id="next-button" class="btn btn-secondary" disabled>
                         Nächste Frage
                     </button>
                 </div>
