--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
 
     <div class="container">
 
-        <div class="card quiz-card">
+        <div class="card quiz-card" id="card">
+
+            <div class="card-body">
+                Quiz beendet
+            </div>
+
             <div class="card-body">
                 <h5 class="card-title" id="questiontext">Frage</h5>
 
