--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <div class="card-body endscreen" id="endscreen" style="display: none;">
                 <div>
                     <h5>Quiz beendet</h5>
-                    <span>Du hast </span><b id="right-answer-count">X</b> von <b id="question-count-endscreen">Y</b> Fragen richtig beantwortet
+                    <span>Du hast </span><b id="right-answer-count">X</b> von <b id="question-count-endscreen">Y</b>
+                    Fragen richtig beantwortet
                 </div>
                 <img src="img/tropy.png">
             </div>
@@ -36,6 +37,11 @@
             <!-- --------------------------------------------------- -->
             <div class="card-body" id="question-body">
                 <h5 class="card-title" id="questiontext">Frage</h5>
+
+                <div class="progress mb-2">
+                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
+                        aria-valuemin="0" aria-valuemax="100">25%</div>
+                </div>
 
                 <div class="card quiz-answer-card mb-2" onclick="answer('answer1')">
                     <div class="card-body" id="answer1">
