--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
             <div class="card-body" id="question-body">
                 <h5 class="card-title" id="questiontext">Frage</h5>
 
-                <div class="progress mb-2">
-                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
-                        aria-valuemin="0" aria-valuemax="100">25%</div>
+                <div id="progress-bar" class="progress mb-2">
+                    <div class="progress-bar" role="progressbar" style="width: 0%;"></div>
                 </div>
 
                 <div class="card quiz-answer-card mb-2" onclick="answer('answer1')">
