--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
             <div class="card-body endscreen" id="endscreen" style="display: none;">
                 <div>
                     <h5>Quiz beendet</h5>
-                    <span>Du hast </span><b id="right-answer-count">X</b> von <b id="question-count-endscreen">Y</b>
-                    Fragen richtig beantwortet
+                    <p><span>Du hast </span><b id="right-answer-count">X</b> von <b id="question-count-endscreen">Y</b>
+                    Fragen richtig beantwortet</p>
+                    <span>
+                        <button onclick="newstart()">Neustart</button>
+                    </span>
                 </div>
                 <img src="img/tropy.png">
             </div>
