--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <span>
                         Frage <b id="number-of-question">1</b> von <b id="question-count">5</b>
                     </span>
-                    <button onclick="nextQuestion()" id="next-button" class="btn btn-secondary" disabled>
+                    <button onclick="nextQuestion()" id="next-button" class="btn btn-primary" disabled>
                         Nächste Frage
                     </button>
                 </div>
