--- a/index.html
+++ b/index.html
@@ -22,64 +22,73 @@
     <div class="container">
 
 
-        <!-- --------------------------------------------- -->
         <div class="card quiz-card">
 
-            <div class="card-body endscreen" id="endscreen" style="display: none;">
-                <div>
-                    <h5>Quiz beendet</h5>
-                    <p><span>Du hast </span><b id="right-answer-count">X</b> von <b id="question-count-endscreen">Y</b>
-                    Fragen richtig beantwortet</p>
-                    <span>
-                        <button onclick="newstart()">Neustart</button>
-                    </span>
-                </div>
-                <img src="img/tropy.png">
+
+            <!-- ------------------------------------------------------------------- -->
+            <div class="card-body startscreen" id="startscreen">
+               <h1>Quizapp</h1>
+               <button onclick="startQuizGeneralKnowledge()" class="btn btn-secondary">Allgemeinwissen</button>
             </div>
+            <!-- -------------------------------------------------------------------- -->
+            <div class="card quiz-card" style="display: none;">
 
-            <!-- --------------------------------------------------- -->
-            <div class="card-body" id="question-body">
-                <h5 class="card-title" id="questiontext">Frage</h5>
-
-                <div id="progress-bar" class="progress mb-2">
-                    <div class="progress-bar" role="progressbar" style="width: 0%;"></div>
-                </div>
-
-                <div class="card quiz-answer-card mb-2" onclick="answer('answer1')">
-                    <div class="card-body" id="answer1">
-                        Antwort
+                <div class="card-body endscreen" id="endscreen" style="display: none;">
+                    <div>
+                        <h5>Quiz beendet</h5>
+                        <p><span>Du hast </span><b id="right-answer-count">X</b> von <b
+                                id="question-count-endscreen">Y</b>
+                            Fragen richtig beantwortet</p>
+                        <span>
+                            <button onclick="newstart()">Zurück zur Startseite</button>
+                        </span>
                     </div>
+                    <img src="img/tropy.png">
                 </div>
 
-                <div class="card quiz-answer-card mb-2" onclick="answer('answer2')">
-                    <div class="card-body" id="answer2">
-                        Antwort
+                <!-- --------------------------------------------------- -->
+                <div class="card-body" id="question-body">
+                    <h5 class="card-title" id="questiontext">Frage</h5>
+
+                    <div id="progress-bar" class="progress mb-2">
+                        <div class="progress-bar" role="progressbar" style="width: 0%;"></div>
                     </div>
-                </div>
 
-                <div class="card quiz-answer-card mb-2" onclick="answer('answer3')">
-                    <div class="card-body" id="answer3">
-                        Antwort
+                    <div class="card quiz-answer-card mb-2" onclick="answer('answer1')">
+                        <div class="card-body" id="answer1">
+                            Antwort
+                        </div>
                     </div>
-                </div>
 
-                <div class="card quiz-answer-card mb-2" onclick="answer('answer4')">
-                    <div class="card-body" id="answer4">
-                        Antwort
+                    <div class="card quiz-answer-card mb-2" onclick="answer('answer2')">
+                        <div class="card-body" id="answer2">
+                            Antwort
+                        </div>
                     </div>
-                </div>
 
-                <div class="question-footer">
-                    <span>
-                        Frage <b id="number-of-question">1</b> von <b id="question-count">5</b>
-                    </span>
-                    <button onclick="nextQuestion()" id="next-button" class="btn btn-primary" disabled>
-                        Nächste Frage
-                    </button>
+                    <div class="card quiz-answer-card mb-2" onclick="answer('answer3')">
+                        <div class="card-body" id="answer3">
+                            Antwort
+                        </div>
+                    </div>
+
+                    <div class="card quiz-answer-card mb-2" onclick="answer('answer4')">
+                        <div class="card-body" id="answer4">
+                            Antwort
+                        </div>
+                    </div>
+
+                    <div class="question-footer">
+                        <span>
+                            Frage <b id="number-of-question">1</b> von <b id="question-count">5</b>
+                        </span>
+                        <button onclick="nextQuestion()" id="next-button" class="btn btn-primary" disabled>
+                            Nächste Frage
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 </body>
 
