--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                     <div class="question-footer">
                         <span>
-                            Frage <b id="number-of-question">1</b> von <b id="question-count">5</b>
+                            Frage <b id="number-of-question">xxx</b> von <b id="question-count">xxx</b>
                         </span>
                         <button onclick="nextQuestion()" id="next-button" class="btn btn-primary" disabled>
                             Nächste Frage
